--- a/source/scss/common/base.scss
+++ b/source/scss/common/base.scss
@@ -2,6 +2,16 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  min-width: $mobile-width;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+  line-height: normal;
+  font-family: 'ProximaNova', sans-serif;
+  color: $color-site;
+}
+
 img {
   border-style: none;
   height: auto;
