--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,5 +1,8 @@
 //common
 @import "common/normalize.scss";
 @import "common/reset.scss";
+@import "common/variables.scss";
+@import "common/fonts.scss";
 @import "common/base.scss";
 //blocks
+@import "blocks/header.scss";
