feature: added basic styles

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -6,3 +6,11 @@
 @import "common/base.scss";
 //blocks
 @import "blocks/header.scss";
+@import "blocks/nav.scss";
+@import "blocks/slider.scss";
+@import "blocks/link-section.scss";
+@import "blocks/activity.scss";
+@import "blocks/info.scss";
+@import "blocks/form-section.scss";
+@import "blocks/footer.scss";
+@import "blocks/statistics";
