--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -1,4 +1,34 @@
 .header {
+  position: relative;
   color: white;
   background-color: $color-site;
+  background: url(../../img/header-bg.png);
+  background-position: bottom center;
+  background-size: cover;
+  &__container {
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+    margin: 0 auto;
+    max-width: 1152px;
+  }
+  &__top {
+    display: flex;
+    justify-content: space-between;
+  }
+  &__logo {
+    width: 78px;
+    height: 100px;
+  }
+  &__btns-wrapper {
+    position: absolute;
+  }
+} 
+
+@media (min-width: $desktop-width){
+  .header {
+    &__top {
+      margin-bottom: 129px;
+    }
+  }
 }
