--- a/source/scss/common/fonts.scss
+++ b/source/scss/common/fonts.scss
@@ -23,6 +23,17 @@
 @font-face {
   font-family: 'ProximaNova';
   src:
+    local('ProximaNova Semibold'),
+    url('../../fonts/ProximaNova-Bold.woff2') format('woff2'),
+    url('../../fonts/ProximaNova-Bold.woff') format('woff');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'ProximaNova';
+  src:
     local('ProximaNova Bold'),
     url('../../fonts/ProximaNova-Bold.woff2') format('woff2'),
     url('../../fonts/ProximaNova-Bold.woff') format('woff');
