fix: image routes

--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -2,7 +2,7 @@
   position: relative;
   color: white;
   background-color: $color-site;
-  background: url(../../img/header-bg.png);
+  background: url(../img/header-bg.png);
   background-position: bottom center;
   background-size: cover;
   &__container {
