--- a/source/scss/blocks/form-section.scss
+++ b/source/scss/blocks/form-section.scss
@@ -1,7 +1,7 @@
 .form-section {
   display: flex;
   justify-content: space-between;
-  background: url(../../img/form-bg.png);
+  background: url(../img/form-bg.png);
   background-position: left top;
   background-size: cover;
   &__title {
