--- a/source/scss/common/base.scss
+++ b/source/scss/common/base.scss
@@ -23,6 +23,11 @@ picture {
   display: block;
 }
 
+button {
+  border: none;
+  cursor: pointer;
+}
+
 .visually-hidden {
   position: absolute;
 
