--- a/source/scss/common/fonts.scss
+++ b/source/scss/common/fonts.scss
@@ -24,8 +24,8 @@
   font-family: 'ProximaNova';
   src:
     local('ProximaNova Semibold'),
-    url('../../fonts/ProximaNova-Bold.woff2') format('woff2'),
-    url('../../fonts/ProximaNova-Bold.woff') format('woff');
+    url('../../fonts/ProximaNova-Semibold.woff2') format('woff2'),
+    url('../../fonts/ProximaNova-Semibold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
