--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -12,5 +12,6 @@
 @import "blocks/activity.scss";
 @import "blocks/info.scss";
 @import "blocks/form-section.scss";
-@import "blocks/footer.scss";
 @import "blocks/statistics";
+@import "blocks/popup.scss";
+@import "blocks/footer.scss";
