--- a/source/scss/blocks/activity.scss
+++ b/source/scss/blocks/activity.scss
@@ -1,43 +1,168 @@
 .activity {
+  padding: 63px 52px 49px;
   background-color: #F8F8F8;
   &__heading {
-    max-width: 1006px;
-    margin: 0 auto;
-    text-align: right;
-    font-size: 60px;
+    position: relative;
+    max-width: 882px;
+    margin: 0 auto 39px;
+    text-align: center;
+    font-size: 34px;
     font-weight: 700;
     line-height: 72px;
+    &:after {
+      content: " ";
+      position: absolute;
+      top: -14px;
+      right: -12px;
+      width: 50px;
+      height: 50px;
+      background: url(../img/svg/angle.svg);
+      background-repeat: no-repeat;
+    }
   }
   &__list {
     display: grid;
-    grid-template-columns: 100%;
-    max-width: 994px;
+    grid-template-columns: 1fr;
+    grid-row-gap: 61px;
+    max-width: 986px;
     margin: 0 auto;
   }
+  &__item {
+    text-align: center;
+    &:nth-child(1) {
+      .activity__img {
+        width: 106px;
+        height: 109px;
+      }
+    }
+    &:nth-child(2) {
+      .activity__img {
+        width: 106px;
+        height: 100px;
+      }
+    }
+    &:nth-child(3) {
+      .activity__img {
+        width: 100px;
+        height: 100px;
+      }
+    }
+    &:nth-child(4) {
+      .activity__img {
+        width: 100px;
+        height: 105px;
+      }
+    }
+    &:nth-child(5) {
+      .activity__img {
+        width: 191px;
+        height: 127px;
+      }
+    }
+    &:nth-child(6) {
+      .activity__img {
+        width: 210px;
+        height: 108px;
+      }
+    }
+  }
+  &__img {
+    margin-bottom: 28px;
+  }
   &__title {
+    margin-bottom: 15px;
+    text-align: left;
     font-size: 18px;
     font-weight: 700;
     line-height: 20px;
+    text-transform: uppercase;
   }
   &__text {
     color: $color-gray;
+    text-align: left;
     font-size: 15px;
     line-height: 19px;
   }
 }
 
-@media (min-width: 800px){
+@media (min-width: 750px){
   .activity {
     &__list {
-      grid-template-columns: 50% 50%;
+      grid-template-columns: 1fr 1fr;
     }
   }
 }
 
 @media (min-width: $desktop-width){
   .activity {
+    padding-top: 146px;
+    padding-bottom: 114px;
     &__list {
-      grid-template-columns: calc(100%/3) calc(100%/3) calc(100%/3);
+      grid-template-columns: 271px 241px 283px;
+    }
+    &__heading {
+      margin-bottom: 69px;
+      text-align: right;
+      font-size: 60px;
+      line-height: 72px;
+      &:after {
+        top: -26px;
+        right: -69px;
+      }
+    }
+    &__list {
+      grid-column-gap: 103px;
+      grid-row-gap: 48px;
+    }
+    &__img {
+      margin-bottom: 29px;
+    }
+    &__title {
+      margin-bottom: 8px;
+    }
+    &__item {
+      &:nth-child(1) {
+        .activity__img {
+          padding-right: 41px;
+          width: 142px;
+          height: 146px;
+        }
+      }
+      &:nth-child(2) {
+        .activity__img {
+          width: 160px;
+          height: 150px;
+        }
+      }
+      &:nth-child(3) {
+        .activity__img {
+          padding-right: 16px;
+          width: 150px;
+          height: 150px;
+        }
+        .activity__title {
+          padding-right: 20px;
+        }
+      }
+      &:nth-child(4) {
+        .activity__img {
+          padding-right: 22px;
+          width: 132px;
+          height: 139px;
+        }
+      }
+      &:nth-child(5) {
+        .activity__img {
+          padding-top: 9px;
+          padding-left: 18px;      
+        }
+      }
+      &:nth-child(6) {
+        .activity__img {
+          padding-top: 28px;
+          padding-right: 29px;
+        }
+      }
     }
   }
 }
