--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -8,27 +8,43 @@
   &__container {
     display: flex;
     flex-direction: column;
-    padding: 0 20px;
+    padding: 0 27px;
     margin: 0 auto;
     max-width: 1152px;
   }
   &__top {
     display: flex;
     justify-content: space-between;
+    padding-top: 28px;
+    margin-bottom: 55px;
   }
   &__logo {
-    width: 78px;
-    height: 100px;
+    width: 39px;
+    height: 50px;
   }
   &__btns-wrapper {
     position: absolute;
+  }
+  &__slider {
+    margin-bottom: 71px;
+  }
+  &__link-section {
+    margin: 0 auto;
+    max-width: 1152px;
   }
 } 
 
 @media (min-width: $desktop-width){
   .header {
     &__top {
-      margin-bottom: 129px;
+      margin-bottom: 133px;
+    }
+    &__logo {
+      width: 78px;
+      height: 100px;
+    }
+    &__slider {
+      margin-bottom: 137px;
     }
   }
 }
