--- a/source/scss/blocks/info.scss
+++ b/source/scss/blocks/info.scss
@@ -1,19 +1,137 @@
 .info {
-  padding: 30px 20px;
+  display: grid;
+  grid-template-columns: 1fr;
+  margin: 0 auto;
+  max-width: 1300px;
+  padding: 100px 28px 97px;
   &__title {
-    font-size: 40px;
+    margin-bottom: 16px;
+    font-size: 24px;
     font-weight: 700;
-    line-height: 55px;
+    line-height: 32px;
+    text-align: left;
   }
   &__text {
+    margin-bottom: 32px;
     color: $color-gray;
     font-size: 15px;
     line-height: 21px;
+  }
+  &__button {
+    order: 4;
+    width: 171px;
+    height: 44px;
+    margin: 0 auto;
+    color: white;
+    font-size: 14px;
+    line-height: 18px;
+    text-transform: uppercase;
+    background-color: $color-orange;
+    border-radius: 4px;
+    &:hover {
+      background-color: #df6f00;
+    }
+  }
+  &__video {
+    position: relative;
+    margin: 0 auto 39px;
+    max-width: fit-content;
+    text-align: center;
+  }
+  &__video-play {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 34px;
+    height: 34px;
+  }
+  &__video-text {
+    position: absolute;
+    bottom: 52px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #fff;
+    font-size: 10px;
+    font-weight: 600;
+    line-height: 14px;
+    text-transform: uppercase;
+  }
+  &__video-title {
+    position: absolute;
+    bottom: 29px;
+    left: 50%;
+    transform: translateX(-50%);
+    color: #fff;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 22px;
+    text-transform: uppercase;
   }
 }
 
 @media (min-width: $desktop-width){
   .info {
+    grid-template-columns: 438px 724px;
+    grid-template-rows: 95px 63px 92px 193px;
+    grid-column-gap: 140px;
     padding: 114px 137px 97px 160px;
+    &__title {
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row-start: 2;
+      grid-row-end: 3;
+      margin: 0;
+      font-size: 40px;
+      line-height: 55px;
+    }
+    &__text {
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row-start: 3;
+      grid-row-end: 4;
+      margin-bottom: 17px;
+    }
+    &__button {
+      order: 3;
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row-start: 4;
+      grid-row-end: 5;
+      margin: 0 auto 0 0;
+    }
+    &__video {
+      order: 4;
+      grid-column-start: 2;
+      grid-column-end: 3;
+      grid-row-start: 1;
+      grid-row-end: 5;
+      margin: 0;
+    }
+    &__video-play {
+      width: 77px;
+      height: 77px;
+      left: 47%;
+      top: 48%;
+      cursor: pointer;
+      transition: 0.3s;
+      &:hover {
+        opacity: 0.8;
+      }
+    }
+    &__video-text {
+      bottom: 151px;
+      left: 47%;
+      font-size: 15px;
+      line-height: 20px;
+    } 
+    &__video-title {
+      bottom: 29px;
+      font-size: 32px;
+      line-height: 38px;
+      bottom: 105px;
+      left: 19%;
+      transform: none;
+    }
   }
 }
