--- a/source/scss/blocks/nav.scss
+++ b/source/scss/blocks/nav.scss
@@ -3,11 +3,94 @@
     display: flex;
     justify-content: space-between;
   }
+  &__button {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    margin: 10px 8px 0 0;
+    border: none;
+    background-color: rgba(1, 1, 1, 0);
+    background-position: center;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    &--closed {
+      background-image: url('../img/svg/burger.svg');
+    }
+    &--opened {
+      background-image: url('../img/svg/close.svg');
+
+    }
+  }
+  &--hide {
+    display: none;
+    transition: 0.5s;
+  }
+  &__wrapper {
+    position: absolute;
+    left: 0px;
+    top: 85px;
+    width: 100%;
+    background-color: $color-site;
+    box-sizing: border-box;
+    z-index: 100;
+  }
+  &__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0;
+  }
+  &__item {
+    padding: 10px 0;
+  }
   &__item-link {
-    text-transform: uppercase;
-    font-family: 'ProximaNova';
     font-size: 15px;
     font-weight: 700;
     line-height: 18px;
+    text-transform: uppercase;
+    cursor: pointer;
+    transition: 0.4s;
+    &--active {
+      border-bottom: 3px solid $color-orange;
+    }
+    &:hover {
+      color: $color-orange;
+    }
+  }
+}
+
+@media (min-width: 700px){
+  .nav {
+    padding-top: 20px;
+    &__button {
+      display: none;
+    }
+    &__wrapper {
+      position: relative;
+      top: 0;
+    }
+    &--hide {
+      display: flex;
+    }
+    &__list {
+      flex-direction: row;
+      width: auto;
+      padding: 0;
+      background-color: rgba(1, 1, 1, 0);
+    }
+    &__item {
+      padding: 10px 0 20px 34px;
+    }
+    &__item-link {
+      padding-bottom: 6px;
+      font-weight: 700;
+      font-size: 14px;
+    }
+  }
+}
+
+@media (min-width: $desktop-width){
+  .nav {
+    padding-top: 40px;
   }
 }
