--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -1,22 +1,126 @@
 .slider {
-  margin-top: -1px;
+  padding: 0 28px;
   color: white;
   &__wrapper {
     max-width: 988px;
     margin: 0 auto;
+    overflow: hidden;
+  }
+  &__list {
+    width: 300%;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    transform: translateX(0);
+    transition: all 0.3s;
+  }
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 988px;
+  }
+  &__img {
+    padding-bottom: 65px;
+    height: 82px;
+    width: 99px;
   }
   &__heading {
-    font-size: 55px;
+    padding-right: 10px;
+    margin-bottom: 15px;
+    font-size: 32px;
     font-weight: 700;
-    line-height: 55px;
+    line-height: 40px;
   }
   &__text {
+    padding-right: 30px;
+    margin-bottom: 28px;
     font-size: 16px;
     font-weight: 600;
-    line-height: 30px;
+    line-height: 20px;
+  }
+  &__slide-button {
+    padding: 18px 42px;
+    font-size: 14px;
+    color: white;
+    font-weight: 700;
+    text-transform: uppercase;
+    background-color: $color-orange;
+    border-radius: 4px;
+    &:hover {
+      background-color: #df6f00;
+    }
+  }
+  &__btns-wrapper {
+    display: none;
+  }
+}
+
+@media (min-width: 1200px){
+  .slider {
+    position: relative;
+
+    &__item {
+      width: 100vw;
+      flex-direction: row;
+      justify-content: space-between;
+    }
+    &__img {
+      order: 2;
+    }
+    &__heading {
+      margin-bottom: 8px;
+    }
+    &__btns-wrapper {
+      position: absolute;
+      right: 71px;
+      top: 66px;
+      display: flex;
+      flex-direction: column;
+    }
+    &__btn {
+      width: 19px;
+      height: 35px;
+      margin: 0px;
+      border: none;
+      background-color: rgba(1, 1, 1, 0);
+      background-image: url('../img/svg/btn-slider.svg');
+      background-position: center;
+      background-repeat: no-repeat;
+      cursor: pointer;
+      transition: 0.4s;
+      &:hover {
+        opacity: 0.6;
+      }
+      &:active {
+        opacity: 0.8;
+      }
+      &--active {
+        background-image: url('../img/svg/btn-slider-active.svg');
+        background-position: center;
+        background-repeat: no-repeat;
+      }
+    }
   }
 }
 
 @media (min-width: $desktop-width){
-
+  .slider {
+    &__img {
+      padding: 2px 60px 0 0;
+      height: 121px;
+      width: 149px;
+    }
+    &__heading {
+      padding-right: 0px;
+      font-size: 55px;
+      line-height: 55px;
+    }
+    &__text {
+      padding: 0;
+      margin-bottom: 45px;
+      max-width: 500px;
+      line-height: 30px;
+    }
+  }
 }
