--- a/source/scss/blocks/nav.scss
+++ b/source/scss/blocks/nav.scss
@@ -30,6 +30,7 @@
     left: 0px;
     top: 85px;
     width: 100%;
+    height: 100%;
     background-color: $color-site;
     box-sizing: border-box;
     z-index: 100;
