--- a/source/scss/common/fonts.scss
+++ b/source/scss/common/fonts.scss
@@ -2,8 +2,8 @@
   font-family: 'ProximaNova';
   src:
     local('ProximaNova Light'),
-    url('../../fonts/ProximaNova-LightIt.woff2') format('woff2'),
-    url('../../fonts/ProximaNova-LightIt.woff') format('woff');
+    url('../fonts/ProximaNova-LightIt.woff2') format('woff2'),
+    url('../fonts/ProximaNova-LightIt.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -13,8 +13,8 @@
   font-family: 'ProximaNova';
   src:
     local('ProximaNova Regular'),
-    url('../../fonts/ProximaNova-Regular.woff2') format('woff2'),
-    url('../../fonts/ProximaNova-Regular.woff') format('woff');
+    url('../fonts/ProximaNova-Regular.woff2') format('woff2'),
+    url('../fonts/ProximaNova-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -24,8 +24,8 @@
   font-family: 'ProximaNova';
   src:
     local('ProximaNova Semibold'),
-    url('../../fonts/ProximaNova-Semibold.woff2') format('woff2'),
-    url('../../fonts/ProximaNova-Semibold.woff') format('woff');
+    url('../fonts/ProximaNova-Semibold.woff2') format('woff2'),
+    url('../fonts/ProximaNova-Semibold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -35,8 +35,8 @@
   font-family: 'ProximaNova';
   src:
     local('ProximaNova Bold'),
-    url('../../fonts/ProximaNova-Bold.woff2') format('woff2'),
-    url('../../fonts/ProximaNova-Bold.woff') format('woff');
+    url('../fonts/ProximaNova-Bold.woff2') format('woff2'),
+    url('../fonts/ProximaNova-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
   font-display: swap;
